<resources>
    <string name="app_name">Dokter Diabetes for Elderly</string>
    <string name="judul_artikel">Judul Artikel</string>
    <string name="detail_artikel">Detail Artikel</string>
    <string name="berat_badan_bmi">Berat Badan(BMI)</string>
    <string name="carbo_calculator">Carbo Calculator</string>
    <string name="todo">TODO</string>
    <string name="artikel">Artikel</string>
    <string name="konsultasi">Konsultasi</string>
    <string name="kembali">Kembali</string>
    <string name="carbo">carbo</string>
    <string name="nama">nama</string>
    <string name="simpan">Simpan</string>
    <string name="ringan">Ringan</string>
    <string name="cukup">Cukup</string>
    <string name="aktif">Aktif</string>
    <string name="level_aktifitas">Level Aktifitas</string>
    <string name="tambah_data_sarapan">Tambah Data Sarapan +</string>
    <string name="tambah_data_makan_siang">Tambah Data Makan Siang +</string>
    <string name="tambah_data_makan_malam">Tambah Data Makan Malam +</string>
    <string name="gula_darah_rendah_80_mg_dl"><![CDATA[Gula Darah Rendah : < 80 mg/dL]]></string>
    <string name="mg_dl">mg/dL</string>
    <string name="data_glukosa">Data Glukosa</string>
    <string name="ex_160_cm">Ex: 160 cm</string>
    <string name="tanggal_data_dimasukkan">Tanggal data dimasukkan:</string>
    <string name="masukan_tinggi_badan">Masukan Tinggi Badan:</string>
    <string name="kesehatan">Kesehatan</string>
    <string name="info_diabetes">Info Diabetes</string>
    <string name="responden">Responden :</string>
    <string name="jawaban_konsultasi">Jawaban konsultasi</string>
    <string name="anda_merupakan_pengguna_baru_silahkan_masukan_data_baru">Anda merupakan pengguna baru, silahkan masukan data baru</string>
    <string name="gula_darah_mg_dl">Gula Darah (mg/dL):</string>
    <string name="ex_80_mg_dl">Ex: 80 mg/dL</string>
    <string name="puasa">Puasa</string>
    <string name="buat_pertanyaan_konsultasi">Buat Pertanyaan Konsultasi</string>
    <string name="riwayat_konsultasi">Riwayat Konsultasi</string>
    <string name="kategori">Kategori</string>
    <string name="semua_artikel">Semua Artikel</string>
    <string name="login">LOGIN</string>
    <string name="menu">MENU</string>
    <string name="glukosa">Glukosa</string>
    <string name="pertanyaan_konsultasi">Pertanyaan Konsultasi</string>
    <string name="masukan_pertanyaan">Masukan Pertanyaan</string>
    <string name="judul_pertanyaan">Judul Pertanyaan</string>
    <string name="detail_pertanyaan">Detail Pertanyaan</string>
    <string name="buat_pertanyaan">Buat Pertanyaan</string>
    <string name="keluarga_pendamping">Keluarga / Pendamping</string>
    <string name="lansia">Lansia</string>
    <string name="masuk_sebagai">MASUK SEBAGAI:</string>
    <string name="_081804109331">081804109331</string>
    <string name="masuk_riwayat_pertanyaan">Masuk Riwayat Pertanyaan</string>
    <string name="keluar_akun">KELUAR AKUN</string>
    <string name="resep">Resep</string>
    <string name="shop">Shop</string>
    <string name="shopee">Shopee</string>
    <string name="lazada">Lazada</string>
    <string name="tokopedia">Tokopedia</string>
    <string name="go_shop">Go-Shop</string>
    <string name="lewati">Lewati</string>
    <string name="tambah_makan_malam">Tambah Makan Malam</string>
    <string name="tambah_makan_siang">Tambah Makan Siang</string>
    <string name="tambah_sarapan">Tambah Sarapan</string>
    <string name="data_list_glukosa">data list glukosa</string>
    <string name="tanggal_data_dimasukan">Tanggal data dimasukan:</string>
    <string name="judul_pesan">Judul Pesan</string>
    <string name="detail_pesan">Detail Pesan</string>
    <string name="judul_resep">Judul Resep</string>
    <string name="detail_resep">Detail Resep</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="registrasi">Registrasi</string>
    <string name="pengguna">Pengguna</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="detail_konsultasi">detail konsultasi</string>
    <string name="id_konsultasi">id konsultasi</string>
    <string name="jawaban_dokter">Jawaban Dokter:</string>
    <string name="masukan_data">Masukan Data</string>
    <string name="gula_darah_tinggi_200_mg_dl_mg_dl_sewaktu">Gula Darah Tinggi : ≥ 200 mg/dL mg/dL (Sewaktu)</string>
    <string name="gula_darah_tinggi_126_mg_dl_mg_dl_puasa">Gula Darah Tinggi : ≥ 126 mg/dL mg/dL (Puasa)</string>
    <string name="gula_darah_normal_80_125_mg_dl">Gula Darah Normal : 80 - 125 mg/dL</string>
    <string name="beranda">BERANDA</string>
    <string name="pesan">PESAN</string>
    <string name="profil">PROFIL</string>
    <string name="diet">DIET</string>
    <string name="olahraga">OLAHRAGA</string>
    <string name="healthy_life">HEALTHY LIFE</string>
    <string name="semua">SEMUA</string>
    <string name="info_diabetes_konsul">INFO DIABETES</string>
    <string name="cari">Cari</string>
    <string name="tanggal_konsultasi">Tanggal Konsultasi</string>
    <string name="judul_konsultasi">Judul Konsultasi</string>
    <string name="konsultasi_dokter">Konsultasi Dokter</string>
    <string name="tanggal_bulan_tahun_data_hari_ini">Tanggal/Bulan/Tahun data hari ini</string>
    <string name="data_sarapan">Data Sarapan</string>
    <string name="data_makan_siang">Data Makan Siang</string>
    <string name="data_makan_malam">Data Makan Malam</string>
    <string name="lihat_password">Lihat Password</string>
    <string name="kisaran_bmi_yang_sehat_18_5_kg_m2_25_kg_m2">Kisaran BMI yang sehat: 18,5 kg/m2 - 25 kg/m2</string>
    <string name="kisaran_bmi_yang_sehat">Kisaran BMI yang sehat :</string>
    <string name="_18_5_kg_m2_25_kg_m2">18,5 kg/m2 - 25 kg/m2</string>
    <string name="pesan">PESAN</string>
</resources>