<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Konsultasi.KonsultasiUmum.KonsultasiOlahraga"
    android:background="@color/basecolor"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageButton
            android:onClick="back"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/basecolor"
            android:src="@drawable/ic_baseline_navigate_before_24_white"
            tools:targetApi="lollipop"
            android:contentDescription="@string/todo" />
        <TextView
            android:onClick="back"
            android:layout_marginStart="40dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kembali"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            >
        </TextView>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="30dp"
            android:src="@drawable/logodokterdiabetes"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_marginStart="50dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cari"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_toStartOf="@id/searchlogo"
            tools:ignore="RelativeOverlap">
        </TextView>

        <ImageButton
            android:id="@+id/searchlogo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_baseline_search_24"
            android:background="@color/basecolor"
            android:layout_centerVertical="true"
            android:contentDescription="@string/todo" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/konsultasi"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="#FFFFFF"
        android:paddingBottom="10dp"
        >
    </TextView>

    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tabLayout"
        app:tabBackground="@color/btmnavbackground"
        app:tabSelectedTextColor="@color/white"
        app:tabTextColor="#e899af"
        app:tabIndicatorColor="@color/white"

        >
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diet"
            />
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/olahraga"
            />
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_diabetes"
            />
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/healthy_life"
            />
    </com.google.android.material.tabs.TabLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@drawable/backgroundmenu"
        android:layout_marginTop="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/backgroundmenu"
            >


            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="25dp"
                android:id="@+id/listKonsultasi"
                >
            </androidx.recyclerview.widget.RecyclerView>


        </RelativeLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/pertanyaankonsul"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/backgroundbutton"
            android:onClick="masukKonsulDokter"
            android:padding="15dp"
            android:text="@string/buat_pertanyaan_konsultasi"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="-52dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/pertanyaankonsul"
            android:background="@drawable/backgroundgrey"
            android:contentDescription="@string/todo"
            android:onClick="masukKonsulDokter"
            android:src="@drawable/ic_baseline_add_circle_5050" />

    </RelativeLayout>

</LinearLayout>