<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Glukosa.Glukosa"
    android:orientation="vertical"
    android:background="@color/basecolor"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageButton
            android:onClick="back"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/basecolor"
            android:src="@drawable/ic_baseline_navigate_before_24_white"
            tools:targetApi="lollipop"
            android:contentDescription="@string/todo"
            tools:ignore="UsingOnClickInXml" />
        <TextView
            android:onClick="back"
            android:layout_marginStart="40dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kembali"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            tools:ignore="UsingOnClickInXml">
        </TextView>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="30dp"
            android:src="@drawable/logodokterdiabetes"
            android:contentDescription="@string/todo" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/glukosa"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:gravity="center_vertical|center_horizontal"
            android:layout_gravity="center">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/backgroundmenu"
        android:orientation="vertical">
        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/gula_darah_mg_dl"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp">
        </TextView>

        <EditText
            android:id="@+id/numGlukosa"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/ex_80_mg_dl"
            android:inputType="number"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="Autofill">
        </EditText>


        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/tanggal_data_dimasukan"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp">
        </TextView>

        <!--Membuat current date-->
        <TextView
            android:id="@+id/dateGlukosa"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:paddingBottom="10dp"
            />

       <!-- <EditText
            android:id="@+id/tanggalGlukosa"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:hint="dd/mm/yy"
            android:inputType="date"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="20sp">
        </EditText>-->

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/puasa"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:text="@string/puasa"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            >
        </androidx.appcompat.widget.SwitchCompat>

        <Button
            android:onClick="SimpanGlukosa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#a9a9a9"
            android:text="@string/simpan"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            tools:targetApi="lollipop"
            tools:ignore="UsingOnClickInXml">
        </Button>
    </LinearLayout>
</LinearLayout>