<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:padding="5dp">

    <RelativeLayout
        android:layout_margin="5dp"
        android:background="@drawable/backgroundbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="3dp"
        android:id="@+id/id"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/imgResep"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:paddingTop="10dp"
            android:src="@color/basecolor"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/judulResep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/imgResep"
            android:text="@string/judul_resep"
            android:textStyle="bold"
            android:textColor="@color/black"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/detailResep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/judulResep"
            android:text="@string/detail_resep"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="MissingConstraints" />

    </RelativeLayout>

</RelativeLayout>