<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CarboCalculator.TambahDataCarbo.Tambahsarapan"
    android:background="@color/basecolor"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:onClick="back"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/basecolor"
            android:src="@drawable/ic_baseline_navigate_before_24_white"
            tools:targetApi="lollipop"
            android:contentDescription="@string/todo"
            tools:ignore="UsingOnClickInXml">
        </ImageButton>
        <TextView
            android:onClick="back"
            android:layout_marginStart="40dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kembali"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            tools:ignore="RelativeOverlap,UsingOnClickInXml">
        </TextView>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:src="@drawable/logodokterdiabetes"
            android:contentDescription="@string/todo">
        </ImageView>

        <TextView
            android:onClick="lewati"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="45dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lewati"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            tools:ignore="RelativeOverlap,UsingOnClickInXml">
        </TextView>
        <ImageButton
            android:onClick="lewati"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:backgroundTint="@color/basecolor"
            android:src="@drawable/ic_baseline_navigate_next_24"
            tools:targetApi="lollipop"
            android:contentDescription="@string/todo"
            tools:ignore="UsingOnClickInXml" />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/tambah_sarapan"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:background="@drawable/backgroundmenu"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <AutoCompleteTextView
            android:layout_margin="10dp"
            android:id="@+id/searchSarapan"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/cari"
            android:drawableStart="@drawable/ic_baseline_search"
            android:background="@drawable/backgroundgrey"
            tools:ignore="LabelFor" />

        <ScrollView
            android:layout_below="@+id/searchSarapan"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sarapan">
            </androidx.recyclerview.widget.RecyclerView>
        </ScrollView>


    </RelativeLayout>
</LinearLayout>